samples/_failures_safe/1761498747_950a2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b91022eb.c: In function ‘main’:
./samples/SAFE/__tmp_b91022eb.c:158:5: error: expected expression at end of input
  158 |     if (state.error_count > 0)
      |     ^~
./samples/SAFE/__tmp_b91022eb.c:158:5: error: expected declaration or statement at end of input
